# pong

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
lib/: CMakeLists.txt
lib/glad/: README.md
lib/glad/include/glad/: gl.h
res/shaders/: 2d.frag  2d.fs  2d.vs  text.frag  text.vert
scripts/: build  clean  fmt  run
src/: context.h  game.c  game.h  gfx.h  ivec2s.h  main.c  state.h  util.c  util.h  window.c  window.h
src/audio/: audio.c  audio.h
src/gfx/: gfx.c  gfx.h  shader.c  shader.h  text.c  text.h  window.c  window.h
src/util/: types.h  util.c  util.h
